--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
   }
