--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/rushdy87/node_auth#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
